@@ -1,3 +1,7 @@
+2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/DBD/OCI8/OCI8.rb: fix external OS authentication.
+	    I applied Dan Fitch's patch to improper location.
+
 2007-07-03  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/DBD/OCI8/OCI8.rb: fix for external OS authentication.
 	    (contributed by Dan Fitch)
